# ptc-print

./: .all-contributorsrc  .gitignore  CITATION.cff  CMakeLists.txt  CONTRIBUTING.md  Doxyfile  Makefile  README.md  docker-compose.yml  examples.cpp  file.txt  install.sh
.github/workflows/: codeql-analysis.yml  test-compiler-versions.yml
cmake/: Config.cmake.in
docs/: annotated.html  classes.html  classptc_1_1____print____-members.html  classptc_1_1____print____.html  dir_06703c8dd52cabbbaa30028253cf00ca.html  dir_4b3027e9f68e5f1997bc7770e6659b7d.html  dir_d44c64559bbebec7f509842c48db8b23.html  files.html  functions.html  functions_func.html  functions_vars.html  globals.html  globals_defs.html  graph_legend.html  index.html  menudata.js  namespacemembers.html  namespacemembers_enum.html  namespacemembers_func.html  namespacemembers_type.html  namespacemembers_vars.html  namespaceptc.html  namespaceptc_1_1sconstant.html  namespaceptc_1_1stype.html  namespaces.html  print_8hpp.html  print_8hpp__incl.map  print_8hpp__incl.md5  print_8hpp_source.html  structptc_1_1Print-members.html  structptc_1_1Print.html  structptc_1_1Print_1_1select__cout-members.html  structptc_1_1Print_1_1select__cout.html  structptc_1_1____print____-members.html  structptc_1_1____print____.html  structptc_1_1is__streamable-members.html  structptc_1_1is__streamable.html  structptc_1_1null__str__-members.html  structptc_1_1null__str__.html  structptc_1_1null__string-members.html  (+12 more)
docs/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  classes_0.js  classes_1.js  classes_2.js  defines_0.js  defines_1.js  enums_0.js  enums_1.js  enumvalues_0.js  enumvalues_1.js  enumvalues_2.js  files_0.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  namespaces_0.js  searchdata.js  typedefs_0.js  typedefs_1.js  variables_0.js  variables_1.js  variables_2.js  variables_3.js  variables_4.js  variables_5.js
include/ptc/: print.hpp
print/: examples.cpp  print.hpp
ptc/: examples.cpp  print.hpp  tests.cpp
scripts/cmake/: ptc-print-config.cmake
studies/: Makefile  benchmarking.cpp  install_deps.sh  run.sh
studies/benchmarking/: Makefile  analysis.py  benchmarking.cpp  benchmarking_commands.txt  print.cpp  run.sh
studies/benchmarking_compilation/: analysis.py  run.sh
studies/benchmarking_compilation/programs/: pprint.cpp  printf.cpp  ptc.cpp
studies/benchmarking_compile/: run.sh
studies/benchmarking_compile/programs/: fmt.cpp  ptc.cpp  stdout.cpp
studies/benchmarking_compile/scripts/: get_time.py
studies/benchmarking_execution/: CMakeLists.txt  Makefile  analysis.py  benchmarking.cpp  run.sh
studies/benchmarking_runtime/: run.sh
test/: Makefile  system_tests.cpp  tests.cpp  unit_tests.cpp
tests/: .valgrindrc  CMakeLists.txt  IWYU.sh  Makefile  all_tests.sh  include_tests.sh  system_tests.cpp  system_tests.d  threading_tests.cpp  unit_tests.cpp  unit_tests.d  utils.hpp  valgrind_suppressions.supp
